# 07_device_identity

./: CMakeLists.txt  library.json
include/device_identity/: DeviceIdentityThread.h  DeviceTimeSyncThread.h  IDeviceDiagnostics.h
internal/00-public/: 01-DeviceIdentityThread.h  01-DeviceTimeSyncThread.h  02-IDeviceDiagnostics.h
internal/01-interface/: 01-IDeviceIdentityProvider.h  02-IDeviceTimeSyncScheduler.h  03-IDeviceDiagnostics.h
internal/02-variant/: 01-DeviceIdentityProvider.h  01-DeviceTimeSyncNtp.h  02-DeviceTimeSyncScheduler.h  03-DeviceDiagnostics.h
internal/03-thread/: 01-DeviceIdentityThread.h  01-DeviceTimeSyncThread.h
